*CVS*

* Added script/envcon that makes it even easier to start an IRB session for interacting with the domain model. Run with no-args to
  see help.

* Added breakpoint support by default to the WEBrick dispatcher. This means that you can break out of execution at any point in
  the code, investigate and change the model, AND then resume execution! Example:
  
    class WeblogController < ActionController::Base
      def index
        @posts = Post.find_all
        breakpoint "Breaking out from the list"
      end
    end
    
  So the controller will accept the action, run the first line, then present you with a IRB prompt in the WEBrick window (you shouldn't
  run as daemon when you want to use this). Here you can do things like:
  
  Executing breakpoint "Breaking out from the list" at .../webrick_server.rb:16 in 'breakpoint'

    >> @posts.inspect
    => "[#<Post:0x14a6be8 @attributes={\"title\"=>nil, \"body\"=>nil, \"id\"=>\"1\"}>, 
         #<Post:0x14a6620 @attributes={\"title\"=>\"Rails you know!\", \"body\"=>\"Only ten..\", \"id\"=>\"2\"}>]"
    >> @posts.first.title = "hello from a breakpoint"
    => "hello from a breakpoint"

  ...and even better is that you can examine how your runtime objects actually work:

    >> f = @posts.first 
    => #<Post:0x13630c4 @attributes={"title"=>nil, "body"=>nil, "id"=>"1"}>
    >> f.
    Display all 152 possibilities? (y or n)
  
  Finally, when you're ready to resume execution, you press CTRL-D

* Changed environments to be configurable through an environment variable. By default, the environment is "development", but you
  can change that and set your own by configuring the Apache vhost with a string like (mod_env must be available on the server):
  
    SetEnv RAILS_ENV production
  
  ...if you're using WEBrick, you can pick the environment to use with the command-line parameters -e/--environment, like this:
  
    ruby public/dispatcher.servlet -e production
