@@ -1,4 +1,4 @@
-class <%= class_name %>Controller < AbstractApplicationController
+class <%= class_name %>Controller < ApplicationController
   model   :<%= singular_name %>
   layout  'scaffold'
 
