@@ -1,5 +1,4 @@
 # The filters added to this controller will be run for all controllers in the application.
 # Likewise will all the methods added be available for all controllers.
-class AbstractApplicationController < ActionController::Base
-  helper :application
+class ApplicationController < ActionController::Base
 end
