@@ -35,7 +35,7 @@ class Dispatcher
       
       controller_name, module_name = controller_name(request.parameters), module_name(request.parameters)
 
-      require_dependency("abstract_application")
+      require_dependency("application")
       require_dependency(controller_path(controller_name, module_name))
 
       controller_class(controller_name).process(request, response).out
@@ -43,7 +43,7 @@ class Dispatcher
       ActionController::Base.process_with_exception(request, response, exception).out
     ensure
       if ActionController::Base.reload_dependencies
-        Object.send(:remove_const, "AbstractApplicationController") if Object.const_defined?(:AbstractApplicationController)
+        Object.send(:remove_const, "ApplicationController") if Object.const_defined?(:ApplicationController)
         Object.send(:remove_const, controller_class_name(controller_name)) if Object.const_defined?(controller_class_name(controller_name))
         ActiveRecord::Base.reset_associations_loaded
         ActiveRecord::Base.reset_column_information_and_inheritable_attributes_for_all_subclasses
